Bugs resolved.